should have fixed overflow4

--- a/css/main.scss
+++ b/css/main.scss
@@ -28,6 +28,7 @@ body {
   background-position: center;
   overflow-x: hidden;
   position: relative;
+  overflow-y: scroll !important;
   // position: absolute;
   // top: 0;
   // left: 0;
